# asdf-qiskit

./: .coveragerc  .gitignore  .taplo.toml  LICENSE.txt  README.md  pyproject.toml  tox.ini
asdf_qiskit/: __init__.py
asdf_qiskit/converters/: __init__.py
asdf_qiskit/converters/core/: __init__.py  tuple.py  uuid.py
asdf_qiskit/converters/qiskit/: __init__.py
asdf_qiskit/converters/qiskit/circuit/: __init__.py  quantumcircuit.py
asdf_qiskit/converters/qiskit/containers/: __init__.py  bit_array.py  data_bin.py  primitive_result.py  pub_result.py
asdf_qiskit/converters/qiskit/quantum_info/: __init__.py  pauli_list.py  sparsepauliop.py
asdf_qiskit/extension/: __init__.py  asdf_qiskit_extension.py
asdf_qiskit/resources/: __init__.py
asdf_qiskit/resources/manifests/: asdf-qiskit-0.0.0.yaml
asdf_qiskit/resources/schemas/core/: tuple-0.0.0.yaml  uuid-0.0.0.yaml
asdf_qiskit/resources/schemas/qiskit/circuit/: quantumcircuit-0.0.0.yaml
asdf_qiskit/resources/schemas/qiskit/containers/: bitarray-0.0.0.yaml  databin-0.0.0.yaml  primitive-result-0.0.0.yaml  pub-result-0.0.0.yaml
asdf_qiskit/resources/schemas/qiskit/quantum_info/: paulilist-0.0.0.yaml  sparsepauliop-0.0.0.yaml
asdf_qiskit/tags/: __init__.py
asdf_qiskit/tests/: __init__.py  utils.py
compatibility_tests/: README.md  pytest.ini
compatibility_tests/core/: compat_tuple.py
compatibility_tests/qiskit/containers/: compat_bitarray.py
compatibility_tests/qiskit/primitives/: compat_primitive_result.py  compat_pub_result.py
compatibility_tests/qiskit/quantum_info/: compat_paulilist.py  compat_sparsepauliop.py
docs/: conf.py  index.rst
docs/apidocs/: converters.rst  index.rst
docs/dev_guide/: index.rst
docs/guides/: configuration.rst  folder_and_asdf.rst  getting_started.rst  index.rst  installation.rst  supported_types.rst  unsupported_types.rst
pytest_asdf_fixtures/: README.md  __init__.py
tests/converters/core/: test_tuple.py
tests/converters/qiskit/circuit/: test_quantumcircuit.py
tests/converters/qiskit/containers/: test_bitarray.py
tests/converters/qiskit/primitives/: test_primitive_result.py  test_pub_result.py
tests/converters/qiskit/quantum_info/: test_paulilist.py  test_sparsepauliop.py
tools/: verify_headers.py
